--- a/style1.css
+++ b/style1.css
@@ -24,11 +24,6 @@ h1 {
   -webkit-text-fill-color: transparent;
 }
 
-/* ::selection {
-  color: #fff;
-  background: #e74c3c; 
-} */
-
 .wrapper {
   max-width: 550px;
   padding: 28px 0 30px;
@@ -94,9 +89,6 @@ li {
   cursor: pointer;
 }
 
-/* .filters span:first-child {
-  margin-left: 0;
-} */
 
 .filters span.active {
   color: #3498db;
@@ -242,13 +234,15 @@ li {
   padding-right: 8px;
 }
 
-/* @media (max-width: 400px) {
+@media (max-width: 575px) {
   body {
     padding: 0 10px;
   }
 
   .wrapper {
     padding: 20px 0;
+    max-width: 90%; 
+    margin: 0 auto; 
   }
 
   .filters span {
@@ -256,20 +250,34 @@ li {
   }
 
   .task-input {
-    padding: 0 20px;
+    padding: 0 10px; 
   }
 
   .controls {
-    padding: 18px 20px;
+    padding: 18px 10px; 
   }
 
   .task-box {
     margin-top: 20px;
-    margin-right: 5px;
-    padding: 0 15px 10px 20px;
+    margin-right: 0; 
+    padding: 0 10px 10px 10px; 
   }
 
   .task label input {
     margin-top: 4px;
   }
-} */
+  .clear-btn {
+    border: none;
+    outline: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 13px;
+    margin-left: 50px;
+    margin-bottom: -10px;
+    padding: 7px 13px;
+    border-radius: 4px;
+    letter-spacing: 0.3px;
+    transition: transform 0.25s ease;
+    background: linear-gradient(to left, #3498db, #2ecc71);
+  }
+}
